--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   firebase_database: ^9.1.4
   cloud_firestore: ^3.4.7
   firebase_core: ^1.22.0
+  firebase_storage: ^10.3.8
+  firebase_image: ^1.1.1
 
 dev_dependencies:
   flutter_test:
