--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   firebase_core: ^1.22.0
   firebase_storage: ^10.3.8
   firebase_image: ^1.1.1
+  firebase_dart: ^1.0.11
+  cached_network_image: ^3.2.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
